# SO2_rail_simulator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cities.csv  cmake_install.cmake  main.cpp  main_app  railways.csv  trains.csv
src/: .city.h.swp  city.cpp  city.h  connectionmatrix.cpp  connectionmatrix.h  itrain.h  position.cpp  railway.cpp  railway.h  train.cpp  train.h  utils.h
